--- a/Staff Service/appsettings.json
+++ b/Staff Service/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "StaffConnection": "Server=tcp:t7077222-sql.database.windows.net,1433;Initial Catalog=t7077222-db;Persist Security Info=False;User ID=t7077222;Password=DBpassword123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
