--- a/Staff Service/appsettings.json
+++ b/Staff Service/appsettings.json
@@ -7,6 +7,10 @@
     }
   },
   "AllowedHosts": "*",
+  "Auth0": {
+    "Domain": "thamco-group-a.eu.auth0.com",
+    "Audience": "https://staff.thamco.com/"
+  },
   "ConnectionStrings": {
     "DbConnection": ""
   }
