Authentication based on permissions added

--- a/Staff Service/appsettings.json
+++ b/Staff Service/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "Auth0": {
     "Domain": "thamco-group-a.eu.auth0.com",
-    "Audience": "https://staff.thamco.com/"
+    "Audience": "https://thamco.com/"
   },
   "ConnectionStrings": {
     "DbConnection": ""
