--- a/Staff Service/appsettings.json
+++ b/Staff Service/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "Auth0": {
-    "Domain": "thamco-group-a.eu.auth0.com",
+    "Domain": "dev-03ydhf5b.us.auth0.com",
     "Audience": "https://thamco.com/"
   },
   "ConnectionStrings": {
