--- a/Staff Service/appsettings.json
+++ b/Staff Service/appsettings.json
@@ -12,6 +12,6 @@
     "Audience": "https://thamco.com/"
   },
   "ConnectionStrings": {
-    "DbConnection": "Server=tcp:t7077222-sql.database.windows.net,1433;Initial Catalog=t7077222-db;Persist Security Info=False;User ID=t7077222;Password=DBpassword123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DbConnection": ""
   }
 }
