--- a/Staff Service/appsettings.json
+++ b/Staff Service/appsettings.json
@@ -8,8 +8,8 @@
   },
   "AllowedHosts": "*",
   "Auth0": {
-    "Domain": "dev-03ydhf5b.us.auth0.com",
-    "Audience": "https://thamco.com/"
+    "Domain": "",
+    "Audience": ""
   },
   "ConnectionStrings": {
     "DbConnection": ""
